pages/index.module.scss
@import '../styles/variables.scss';

.main {
	max-width: 1440px;
	margin: 0 auto;
}

.container {
	display: flex;
	align-items: center;
	justify-content: space-between;
	width: 100%;
	max-width: 960px;
	min-height: 100vh;
	padding: 52px 20px;
	margin: 0 auto;

	@include breakpoint-md {
		align-items: stretch;
		padding: 0;
	}
}

